# ChangeLog for app-admin/flexlm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/flexlm/ChangeLog,v 1.22 2012/08/05 16:05:45 hasufell Exp $

  05 Aug 2012; Julian Ospald <hasufell@gentoo.org> flexlm-9.5-r2.ebuild:
  use QA_PREBUILT wrt #430038

  12 Jul 2012; Ian Stakenvicius <axs@gentoo.org> flexlm-9.5-r2.ebuild:
  added GPL-2 to LICENSE per bug 425864

  31 May 2012; Zac Medico <zmedico@gentoo.org> flexlm-9.5-r2.ebuild:
  inherit user for enewgroup and enewuser

  16 Apr 2012; Pacho Ramos <pacho@gentoo.org> files/flexlm-conf:
  And fix conf.d file.

*flexlm-9.5-r2 (16 Apr 2012)

  16 Apr 2012; Pacho Ramos <pacho@gentoo.org> +flexlm-9.5-r2.ebuild,
  -flexlm-9.5-r1.ebuild:
  Fix logfile permissions, bug #383787 by Dmitry Stepankov and Ian Delaney.

  02 Nov 2011; Mike Frysinger <vapier@gentoo.org> flexlm-9.5-r1.ebuild:
  Drop superfluous -c usage.

  05 Feb 2008; Ryan Hill <dirtyepic@gentoo.org> flexlm-9.5-r1.ebuild:
  Mirror distfiles locally to prevent hash conflicts.  Bug #123920.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> flexlm-9.5-r1.ebuild:
  (QA) RESTRICT clean up.

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add herd

  24 Jan 2007; Marius Mauch <genone@gentoo.org> flexlm-9.5-r1.ebuild:
  Replacing einfo with elog

  19 Dec 2006; Danny van Dyk <kugelfang@gentoo.org> flexlm-9.5-r1.ebuild:
  QA: Fixed licence, SRC_URI (unreliable host).

  26 Sep 2006; Jeremy Huddleston <eradicator@gentoo.org> files/flexlm-init:
  Use lmdown rather than killing processes.

  24 Feb 2006; <chrb@gentoo.org> -flexlm-9.2.1.ebuild:
  removing old ebuild to fix enduser.pdf digest collision, bug #123920.

*flexlm-9.5-r1 (11 Aug 2005)

  11 Aug 2005; Jeremy Huddleston <eradicator@gentoo.org> files/flexlm-conf,
  files/flexlm-init, -flexlm-9.5.ebuild, +flexlm-9.5-r1.ebuild:
  Revbump to add amd64 support, fix enewuser, cleanup init scripts and ebuild.
