@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/flexlm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/flexlm/ChangeLog,v 1.22 2012/08/05 16:05:45 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/flexlm/ChangeLog,v 1.23 2012/10/18 17:00:39 kensington Exp $
+
+  18 Oct 2012; Michael Palimaka <kensington@gentoo.org> flexlm-9.5-r2.ebuild:
+  Make documentation optional, wrt bug #274362.
 
   05 Aug 2012; Julian Ospald <hasufell@gentoo.org> flexlm-9.5-r2.ebuild:
   use QA_PREBUILT wrt #430038
@@ -79,4 +82,3 @@
   +files/90flexlm, +files/flexlm-conf, +files/flexlm-init,
   +flexlm-9.2.1.ebuild:
   This package was submitted by Chris Bainbridge in bug #23211
-
